--- a/cars.html
+++ b/cars.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMW cars</title>
-    <link rel="icon" href="/images/png-transparent-bmw-gray-hd-logo-thumbnail-removebg-preview.png">
+    <link rel="icon" href="images/png-transparent-bmw-gray-hd-logo-thumbnail-removebg-preview.png">
 </head>
 <script src="https://kit.fontawesome.com/ec2a614422.js" crossorigin="anonymous"></script>
 <body>
@@ -32,7 +32,7 @@
 </div>
 
 <div class="pictur">
-   <div class="img"> <img class="photos" src="/images/cosy.webp" ></div>
+   <div class="img"> <img class="photos" src="images/cosy.webp" ></div>
    <div class="description">
     <a href=""><h1>XM SUV</h1></a>
         <p> The most powerful SUV in the lineup, with engineering by BMW M and a refined luxury interior.</p>
